--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "jsdom": "^28.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.18"
   }
 }
